--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@tailwindcss/postcss": "^4.0.6",
     "axios": "^1.13.2",
-    "backend": "file:..",
     "framer-motion": "^12.28.1",
     "postcss": "^8.5.2",
     "react": "^19.0.0",
