--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "cors": "^2.8.6",
     "dotenv": "^16.6.1",
     "express": "^4.22.1",
+    "express-rate-limit": "^7.5.1",
     "framer-motion": "^12.28.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.23.0",
     "multer": "^1.4.5-lts.1",
